modernizer for presto-hive